--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <script
+      src="https://kit.fontawesome.com/1cffd67a32.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- </BOOTSTRAP> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
